fixed layout issue with navigation

--- a/app/views/apps/sprint-5/assets/sass/sub-application.scss
+++ b/app/views/apps/sprint-5/assets/sass/sub-application.scss
@@ -19,6 +19,7 @@
 	background: #000;
 	padding: 5px 10px;
 	color: #fff;
+	overflow: hidden;
 	
 	a {
 		text-decoration: none;
@@ -103,6 +104,7 @@
 
 .c-global-navigation {
 	background: $grey-3;
+	overflow: hidden;
 	&__tertiary-links {
 		text-align: right;
 	}
